--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
+		"acorn": "^8.11.3",
+		"acorn-walk": "^8.3.2",
 		"recast": "^0.21.2"
 	}
 }
